UF-7041: updated MinaOmbud-integration