@@ -2,10 +2,7 @@ package se.sundsvall.myrepresentative.service.mandates;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.lang.reflect.Type;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 
 import org.assertj.core.api.SoftAssertions;
 import org.assertj.core.api.junit.jupiter.SoftAssertionsExtension;
@@ -14,18 +11,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import com.google.gson.JsonElement;
-import com.google.gson.JsonPrimitive;
-import com.google.gson.JsonSerializationContext;
-import com.google.gson.JsonSerializer;
-
-import generated.se.sundsvall.minaombud.HamtaBehorigheterResponse;
 import se.sundsvall.dept44.test.annotation.resource.Load;
 import se.sundsvall.dept44.test.extension.ResourceLoaderExtension;
-import se.sundsvall.myrepresentative.api.model.MandateStatus;
 import se.sundsvall.myrepresentative.api.model.Role;
 import se.sundsvall.myrepresentative.api.model.mandates.Mandate;
 import se.sundsvall.myrepresentative.api.model.mandates.MandatesResponse;
+
+import generated.se.sundsvall.minaombud.HamtaBehorigheterResponse;
 
 @ExtendWith({ ResourceLoaderExtension.class, MockitoExtension.class, SoftAssertionsExtension.class })
 class MandatesResponseMapperTest {
@@ -34,41 +26,24 @@ class MandatesResponseMapperTest {
 	private MandatesResponseMapper mandatesResponseMapper;
 
 	@Test
-	void test(@Load(value = "junit/behorigheter.json", as = Load.ResourceType.JSON) HamtaBehorigheterResponse response, SoftAssertions softly) {
+	void test(@Load(value = "junit/behorigheter.json", as = Load.ResourceType.JSON) final HamtaBehorigheterResponse response, final SoftAssertions softly) {
 		final MandatesResponse mandatesResponse = mandatesResponseMapper.mapFullmakterResponse(response);
 		assertThat(mandatesResponse).isNotNull();
-		final Mandate mandate = mandatesResponse.getMandates().get(0);
+		final Mandate mandate = mandatesResponse.getMandates().getFirst();
 		softly.assertThat(mandate.getMandateIssuer().getPartyId()).isNull();
 		softly.assertThat(mandate.getMandateIssuer().getType()).isEqualTo("orgnr");
 		softly.assertThat(mandate.getMandateIssuer().getName()).isEqualTo("TB Valls Golv AB");
 		softly.assertThat(mandate.getMandateIssuer().getLegalId()).isEqualTo("5563454502");
 
-		softly.assertThat(mandate.getMandateAcquirers().get(0).getPartyId()).isNull();
-		softly.assertThat(mandate.getMandateAcquirers().get(0).getType()).isEqualTo("pnr");
-		softly.assertThat(mandate.getMandateAcquirers().get(0).getName()).isEqualTo("Karin Andersson");
-		softly.assertThat(mandate.getMandateAcquirers().get(0).getLegalId()).isEqualTo("198101032384");
+		softly.assertThat(mandate.getMandateAcquirers().getFirst().getPartyId()).isNull();
+		softly.assertThat(mandate.getMandateAcquirers().getFirst().getType()).isEqualTo("pnr");
+		softly.assertThat(mandate.getMandateAcquirers().getFirst().getName()).isEqualTo("Karin Andersson");
+		softly.assertThat(mandate.getMandateAcquirers().getFirst().getLegalId()).isEqualTo("198101032384");
 
-		softly.assertThat(mandate.getPermissions().get(0).getCode()).isEqualTo("d7b1de6e-8ef2-49e8-81b0-002646e3a0ff");
-		softly.assertThat(mandate.getPermissions().get(0).getMandateStatus()).isEqualByComparingTo(MandateStatus.ACTIVE);
-		softly.assertThat(mandate.getPermissions().get(0).getMandate()).isEqualTo("3bfb975d-c2a9-4f16-b8e5-11c22a318fac");
+		softly.assertThat(mandate.getPermissions().getFirst().getCode()).isEqualTo("d7b1de6e-8ef2-49e8-81b0-002646e3a0ff");
+		softly.assertThat(mandate.getPermissions().getFirst().getMandate()).isEqualTo("3bfb975d-c2a9-4f16-b8e5-11c22a318fac");
 
 		softly.assertThat(mandate.getMandateRole()).isEqualByComparingTo(Role.ORGANIZATION);
 		softly.assertThat(mandate.getIssuedDate()).isEqualTo(LocalDateTime.parse("2023-01-11T10:57:06.043136"));
-	}
-
-	static class LocalDateTimeAdapter implements JsonSerializer<LocalDateTime> {
-
-		@Override
-		public JsonElement serialize(LocalDateTime date, Type typeOfSrc, JsonSerializationContext context) {
-			return new JsonPrimitive(date.format(DateTimeFormatter.ISO_LOCAL_DATE_TIME));
-		}
-	}
-
-	static class LocalDateAdapter implements JsonSerializer<LocalDate> {
-
-		@Override
-		public JsonElement serialize(LocalDate date, Type typeOfSrc, JsonSerializationContext context) {
-			return new JsonPrimitive(date.format(DateTimeFormatter.ISO_LOCAL_DATE));
-		}
 	}
 }
